fixed h1 close tag
inserted missing less than bracket for closing h1 tag

--- a/website/views/documentation/rails-prototyping-tutorial.html.erb
+++ b/website/views/documentation/rails-prototyping-tutorial.html.erb
@@ -185,7 +185,7 @@ and define that layout now.</p>
     &lt;title&gt;&lt;%= @title %&gt;&lt;/title&gt;
   &lt;/head&gt;
   &lt;body&gt;
-    &lt;h1&gt;&lt;%= @title %&gt;/h1&gt;
+    &lt;h1&gt;&lt;%= @title %&gt;&lt;/h1&gt;
     &lt;%= yield %&gt;
   &lt;/body&gt;
 &lt;/html&gt;</pre>
